# marker-coverage-ShafirCohen

./: .dockerignore  .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json   add high-quality 4K pipeline diagram
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile
include/: color_segmenter.hpp  geometry.hpp  grid_detector.hpp  marker_detector.hpp  marker_types.hpp  timer.hpp
src/: color_segmenter.cpp  geometry.cpp  grid_detector.cpp  main.cpp  marker_detector.cpp
tests/: CMakeLists.txt  tests_basic.cpp
